welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:11: error: ')' expected but 'if' found.
		if(nums(i)==nums(i+2){c=1}
                ^noTriples:14: error: ')' expected but '}' found.
		}
                ^